<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="willyjun1104@gmail.com">kim</maintainer>
  <license>TODO: License declaration</license>

  <depend>python-numpy</depend>
  <depend>python-transforms3d-pip</depend>
  <depend>tf_transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
